# farm_inventory_tracker

./: .env  .env_example  Cargo.toml  README.md
migrations/: 20260225222351_farm.sql  20260225225603_inventory.sql  20260226115241_stock_movements.sql
src/: app.rs  app_state.rs  config.rs  errors.rs  main.rs  router.rs
src/farms/: handler.rs  models.rs  router.rs  service.rs
src/inventory/: handler.rs  models.rs  router.rs  service.rs
src/stock_movement/: handler.rs  mod.rs  models.rs  router.rs  service.rs
