[package]
name = "farm_inventory_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
thiserror = "2.0.18"
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21", features = ["serde", "v4"] }